# Chadpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chadpp.sql  launch.sh
cmake/: FindLAME.cmake  FindPQXX.cmake
src/: application.cpp  application.h  bot.cpp  bot.h  collector.h  command.cpp  command.h  database.cpp  database.h  input.cpp  input.h  language.cpp  language.h  logger.cpp  logger.h  main.cpp  module.cpp  module.h  pch.h  request_proxy.cpp  request_proxy.h  utility.cpp  utility.h  variant_cast.h
src/applications/: application_help.cpp  applications.cpp  applications.h
src/commands/: command_afk.cpp  command_avatar.cpp  command_bnc.cpp  command_guildstats.cpp  command_help.cpp  command_lang.cpp  command_ping.cpp  command_publish.cpp  command_purge.cpp  command_record.cpp  command_reddit.cpp  command_reload.cpp  command_sudo.cpp  command_test.cpp  command_urban.cpp  commands.cpp  commands.h
src/events/: event_button_click.cpp  event_log.cpp  event_message_collect.cpp  event_message_create.cpp  event_ready.cpp  event_select_click.cpp  event_slashcommand.cpp  event_voice_receive.cpp  events.cpp  events.h
src/languages/: language_en.cpp  language_id.cpp  language_jp.cpp  languages.cpp
